refactor: updated entity schemas with DTO schemas (Address, AttendantGroup and Report) in api-spec
